[project]
name = "contact-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "fastapi>=0.116.1",
    "openai>=1.102.0",
    "pandas>=2.2.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "redis>=5.0.0",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
